# library-management

./: CMakeLists.txt  README.md  main.cpp
boundary/persistance/: BaseRepository.cpp  BaseRepository.h
boundary/persistance/Book/: BookRepository.cpp  BookRepository.h
components/: MainWindow.cpp  MainWindow.h  Page.cpp  Page.h
core/Book/: Book.cpp  Book.h
core/User/: User.cpp  User.h
core/Util/: GuidGenerator.cpp  GuidGenerator.h
lib/Triplex/: Argument.cpp  Argument.h  State.cpp  State.h
lib/scripts/sql/: create_database.sql
